feat: RDS implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/todo
+spring.datasource.url=jdbc:mysql://tododatabase.crucwuaie9d1.ap-northeast-2.rds.amazonaws.com:3306/todo
 spring.datasource.username=todoManager
 spring.datasource.password=todomanager
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
