build fix for deployment

--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.example.Main</mainClass>
+                            <mainClass>springboot.SpringPractice.SpringPracticeApplication</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
